[sijie.jiang] N/A: fix html text

--- a/basic-css/inline-style.html
+++ b/basic-css/inline-style.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p style="background: lightcoral;">使用style设置css样式</p>
+    <p style="background: lightcoral;">使用内联样式设置css样式</p>
 </body>
 </html>
