--- a/ways-of-add-css/link/link.html
+++ b/ways-of-add-css/link/link.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="`en`">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p style="background: lightcoral;">使用内联样式设置css样式</p>
+    <p>link或@import引入</p>
 </body>
 </html>
