--- a/ways-of-add-css/style.html
+++ b/ways-of-add-css/style.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         p {
-            background: lightcoral;
+            font-size: 20px;
         }
     </style>
 </head>
