--- a/box-model.html
+++ b/box-model.html
@@ -19,6 +19,7 @@
            line-height: 30px;
        }
        span {
+           /*display: inline-block;*/
            width: 100px;
            height: 100px;
            margin: 5px;
@@ -30,7 +31,7 @@
 </head>
 <body>
     <p>
-        I am a paragraph and this is a <span>span</span> inside that paragraph. A span is an inline element and so does not respect width and height.
+        I am a paragraph and this is a <span>span</span> <span>span</span> inside that paragraph. A span is an inline element and so does not respect width and height.
     </p>
 </body>
 </html>
