--- a/float.html
+++ b/float.html
@@ -30,6 +30,7 @@
         .box {
             float: left;
             /*display: inline-block;*/
+            /*box-sizing: border-box;*/
             width: calc(25% - 20px);
             padding: 10px;
         }
@@ -70,16 +71,15 @@
 </head>
 <body>
     <div class="example1">
-        <img class="logo" src="../assets/logo.svg" alt="">
+        <img class="logo" src="assets/logo.svg" alt="">
         <p>Founded in 1993, we’ve grown from a small team in Chicago to a leading technology consultancy of more than 9,000 Thoughtworkers in 17 countries. Our cross-functional teams of strategists, developers, data engineers and designers bring over two decades of global experience to every partnership.</p>
     </div>
     <div class="box-wrapper">
-        <div class="box"><img src="../assets/social.jpeg" alt=""></div>
-        <div class="box"><img src="../assets/social.jpeg" alt=""></div>
-        <div class="box"><img src="../assets/social.jpeg" alt=""></div>
-        <div class="box"><img src="../assets/social.jpeg" alt=""></div>
+        <div class="box"><img src="assets/social.jpeg" alt=""></div>
+        <div class="box"><img src="assets/social.jpeg" alt=""></div>
+        <div class="box"><img src="assets/social.jpeg" alt=""></div>
+        <div class="box"><img src="assets/social.jpeg" alt=""></div>
     </div>
-
     <ul>
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#news">News</a></li>
