--- a/ways-of-adding-css/index.html
+++ b/ways-of-adding-css/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="`en`">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        p {
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    <p>link或@import引入</p>
+    <p style="color: lightcoral;">three ways of adding css</p>
 </body>
 </html>
