runting: update responsive-layout demo

--- a/responsive-layout/index-responsive.html
+++ b/responsive-layout/index-responsive.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>响应式布局</title>
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <link rel="stylesheet" href="index.css">
-<!--    <link rel="stylesheet" href="percentage.css">-->
-<!--    <link rel="stylesheet" href="media.css">-->
-<!--    <link rel="stylesheet" href="relative-unit.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!-- Note -->
